--- a/css/sexy_admin.css
+++ b/css/sexy_admin.css
@@ -104,10 +104,11 @@ h2 {
  
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
-
+.span1, .span2, .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11, .span12 {margin-bottom: 1em;}
 }
  
 /* Landscape phones and down */
 @media (max-width: 480px) {
 .loginbox h1 {font-size: 2em;}
+.span1, .span2, .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11, .span12 {margin-bottom: 1em;}
 }
