--- a/css/sexy_admin.css
+++ b/css/sexy_admin.css
@@ -42,7 +42,7 @@ h2 {
 	font-size: 1.5em;
 	height: 44px;	
 }
-.listas {
+.listas, .datos {
 	background: white;
  	border: solid 1px #DDD;
  	border-radius: 0.3em;
